--- a/css/linearicons.css
+++ b/css/linearicons.css
@@ -7,6 +7,7 @@
 		url('../fonts/Linearicons-Free.ttf?w118d') format('truetype'),
 		url('../fonts/Linearicons-Free.svg?w118d#Linearicons-Free') format('svg');
 	font-weight: normal;
+	font-display: swap;
 	font-style: normal;
 }
 
