--- a/css/main.css
+++ b/css/main.css
@@ -1626,6 +1626,178 @@ nav a {
 #aboutModal .modal-body {
   font-size: 115%; }
 
+#shareModal {
+  /* Non solid icons get a stroke */
+  /* Solid icons get a fill */ }
+  #shareModal .modal-body {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    padding: 5% 8% 2% 8%; }
+    #shareModal .modal-body textarea {
+      resize: none;
+      border: 1px solid #AAAAAA; }
+  #shareModal .resp-sharing-button__icon {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
+  #shareModal .resp-sharing-button__link {
+    text-decoration: none;
+    color: #fff;
+    margin: 0.5em;
+    display: inline-block; }
+  #shareModal .resp-sharing-button {
+    border-radius: 5px;
+    -webkit-transition: 25ms ease-out;
+    -o-transition: 25ms ease-out;
+    transition: 25ms ease-out;
+    padding: 0.5em 0.75em;
+    font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
+  #shareModal .resp-sharing-button__icon svg {
+    width: 1em;
+    height: 1em;
+    margin-right: 0.4em;
+    vertical-align: top; }
+  #shareModal .resp-sharing-button__icon img {
+    margin-right: 0.4em;
+    vertical-align: top; }
+  #shareModal .resp-sharing-button--small svg {
+    margin: 0;
+    vertical-align: middle; }
+  #shareModal .resp-sharing-button__icon {
+    stroke: #fff;
+    fill: none; }
+  #shareModal .resp-sharing-button__icon--solid,
+  #shareModal .resp-sharing-button__icon--solidcircle {
+    fill: #fff;
+    stroke: none; }
+  #shareModal .resp-sharing-button--twitter {
+    background-color: #55acee; }
+  #shareModal .resp-sharing-button--twitter:hover {
+    background-color: #2795e9; }
+  #shareModal .resp-sharing-button--clipboard {
+    background-color: #333333; }
+    #shareModal .resp-sharing-button--clipboard:hover {
+      background-color: #111111; }
+  #shareModal .resp-sharing-button--pinterest {
+    background-color: #bd081c; }
+  #shareModal .resp-sharing-button--pinterest:hover {
+    background-color: #8c0615; }
+  #shareModal .resp-sharing-button--facebook {
+    background-color: #3b5998; }
+  #shareModal .resp-sharing-button--facebook:hover {
+    background-color: #2d4373; }
+  #shareModal .resp-sharing-button--tumblr {
+    background-color: #35465C; }
+  #shareModal .resp-sharing-button--tumblr:hover {
+    background-color: #222d3c; }
+  #shareModal .resp-sharing-button--reddit {
+    background-color: #5f99cf; }
+  #shareModal .resp-sharing-button--reddit:hover {
+    background-color: #3a80c1; }
+  #shareModal .resp-sharing-button--google {
+    background-color: #dd4b39; }
+  #shareModal .resp-sharing-button--google:hover {
+    background-color: #c23321; }
+  #shareModal .resp-sharing-button--linkedin {
+    background-color: #0077b5; }
+  #shareModal .resp-sharing-button--linkedin:hover {
+    background-color: #046293; }
+  #shareModal .resp-sharing-button--email {
+    background-color: #777; }
+  #shareModal .resp-sharing-button--email:hover {
+    background-color: #5e5e5e; }
+  #shareModal .resp-sharing-button--xing {
+    background-color: #1a7576; }
+  #shareModal .resp-sharing-button--xing:hover {
+    background-color: #114c4c; }
+  #shareModal .resp-sharing-button--whatsapp {
+    background-color: #25D366; }
+  #shareModal .resp-sharing-button--whatsapp:hover {
+    background-color: #1da851; }
+  #shareModal .resp-sharing-button--hackernews {
+    background-color: #FF6600; }
+  #shareModal .resp-sharing-button--hackernews:hover, #shareModal .resp-sharing-button--hackernews:focus {
+    background-color: #FB6200; }
+  #shareModal .resp-sharing-button--vk {
+    background-color: #507299; }
+  #shareModal .resp-sharing-button--vk:hover {
+    background-color: #43648c; }
+  #shareModal .resp-sharing-button--facebook {
+    background-color: #3b5998;
+    border-color: #3b5998; }
+  #shareModal .resp-sharing-button--facebook:hover,
+  #shareModal .resp-sharing-button--facebook:active {
+    background-color: #2d4373;
+    border-color: #2d4373; }
+  #shareModal .resp-sharing-button--twitter {
+    background-color: #55acee;
+    border-color: #55acee; }
+  #shareModal .resp-sharing-button--twitter:hover,
+  #shareModal .resp-sharing-button--twitter:active {
+    background-color: #2795e9;
+    border-color: #2795e9; }
+  #shareModal .resp-sharing-button--email {
+    background-color: #777777;
+    border-color: #777777; }
+  #shareModal .resp-sharing-button--email:hover,
+  #shareModal .resp-sharing-button--email:active {
+    background-color: #5e5e5e;
+    border-color: #5e5e5e; }
+  #shareModal .resp-sharing-button--linkedin {
+    background-color: #0077b5;
+    border-color: #0077b5; }
+  #shareModal .resp-sharing-button--linkedin:hover,
+  #shareModal .resp-sharing-button--linkedin:active {
+    background-color: #046293;
+    border-color: #046293; }
+  #shareModal .resp-sharing-button--reddit {
+    background-color: #5f99cf;
+    border-color: #5f99cf; }
+  #shareModal .resp-sharing-button--reddit:hover,
+  #shareModal .resp-sharing-button--reddit:active {
+    background-color: #3a80c1;
+    border-color: #3a80c1; }
+  #shareModal .resp-sharing-button--whatsapp {
+    background-color: #25D366;
+    border-color: #25D366; }
+  #shareModal .resp-sharing-button--whatsapp:hover,
+  #shareModal .resp-sharing-button--whatsapp:active {
+    background-color: #1DA851;
+    border-color: #1DA851; }
+
 body.modal-open header {
   width: calc(100% - 16px) !important; }
 
