auto open share modal after donation on computer

--- a/css/main.css
+++ b/css/main.css
@@ -2243,7 +2243,7 @@ body.modal-open header {
     top: calc(444.5px * 5 / 4 - 55px);
     right: 59px;
     text-decoration: underline;
-    color: #737373; }
+    color: #0000EE; }
   .donate-area .contact-right .form-control {
     border-radius: 0;
     background-color: transparent;
