--- a/css/main.css
+++ b/css/main.css
@@ -2213,17 +2213,16 @@ body.modal-open header {
 
 .donate-area .fade-gradient-bottom {
   position: absolute;
-  height: 300px;
+  height: 50px;
+  bottom: 85px;
   z-index: 7;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(2, 0, 36, 0)), color-stop(85%, rgba(9, 9, 121, 0)), to(#f9f9ff));
-  background: -webkit-linear-gradient(top, rgba(2, 0, 36, 0) 0%, rgba(9, 9, 121, 0) 85%, #f9f9ff 100%);
-  background: -o-linear-gradient(top, rgba(2, 0, 36, 0) 0%, rgba(9, 9, 121, 0) 85%, #f9f9ff 100%);
-  background: linear-gradient(180deg, rgba(2, 0, 36, 0) 0%, rgba(9, 9, 121, 0) 85%, #f9f9ff 100%); }
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(9, 9, 121, 0)), to(#f9f9ff));
+  background: -webkit-linear-gradient(rgba(9, 9, 121, 0) 0%, #f9f9ff 100%);
+  background: -o-linear-gradient(rgba(9, 9, 121, 0) 0%, #f9f9ff 100%);
+  background: linear-gradient(rgba(9, 9, 121, 0) 0%, #f9f9ff 100%); }
 
 .donate-area .contact-left {
   padding-right: calc(5% + 15px); }
-  .donate-area .contact-left .fade-gradient-bottom {
-    height: 420px; }
   @media (max-width: 1199px) {
     .donate-area .contact-left {
       padding-left: 15px; } }
