--- a/css/main.css
+++ b/css/main.css
@@ -1885,6 +1885,8 @@ body.modal-open header {
     position: absolute;
     top: 10px;
     right: 15px; }
+    .side-venmo .x-out:hover {
+      cursor: pointer; }
     .side-venmo .x-out i {
       font-size: 125%;
       color: black; }
