--- a/css/main.css
+++ b/css/main.css
@@ -1524,11 +1524,11 @@ nav a {
 .lnr {
   font-weight: 700; }
 
-@media (max-width: 768px) {
+@media (max-width: 576px) {
   .not-mobile {
     display: none !important; } }
 
-@media (min-width: 769px) {
+@media (min-width: 577px) {
   .only-mobile {
     display: none !important; } }
 
@@ -1852,7 +1852,7 @@ body.modal-open header {
 
 .side-venmo {
   position: fixed;
-  right: 1vw;
+  right: 0.6vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1861,13 +1861,13 @@ body.modal-open header {
   -ms-flex-direction: column;
   flex-direction: column;
   bottom: 10%;
-  max-width: 10%;
-  background-color: rgba(255, 255, 255, 0.9);
+  max-width: 11%;
+  padding: 14px;
+  background-color: rgba(55, 162, 221, 0.9);
   z-index: 1000;
   -webkit-transition: height ease-in-out 1s;
   -o-transition: height ease-in-out 1s;
   transition: height ease-in-out 1s;
-  padding: 15px;
   font-size: 12px;
   font-weight: 500;
   max-height: 35vh;
@@ -1877,14 +1877,19 @@ body.modal-open header {
       bottom: 0;
       max-width: 100vw;
       width: 100vw;
-      right: unset; } }
+      right: unset;
+      padding-top: 20px;
+      padding-bottom: 20px; } }
   @media (min-width: 577px) {
     .side-venmo {
       border-radius: 5px; } }
+  .side-venmo a {
+    color: #f9f9ff;
+    text-decoration: underline; }
   .side-venmo .x-out {
     position: absolute;
-    top: 10px;
-    right: 15px; }
+    top: 6px;
+    right: 10px; }
     .side-venmo .x-out:hover {
       cursor: pointer; }
     .side-venmo .x-out i {
@@ -2017,7 +2022,7 @@ body.modal-open header {
       font-size: 45px; } }
   @media (max-width: 414px) {
     .banner-content h1 {
-      font-size: 40px; } }
+      font-size: 36px; } }
 
 .banner-content p {
   color: #fff;
